--- a/force-app/main/default/classes/ContactController.cls
+++ b/force-app/main/default/classes/ContactController.cls
@@ -17,9 +17,11 @@ public with sharing class ContactController {
     **/
     @AuraEnabled(cacheable=true)
     public static List<Contact> getContacts() {
-        return [
+       /* return [
             SELECT FirstName, LastName, Email
             FROM Contact
-       ];
+       ];*/
+       throw new AuraHandledException('Forced error');
+
     }
 }
